<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">


        <TextView
            android:id="@+id/text0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="30dp"
            android:maxLines="3"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="80sp" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/send"
            android:layout_width="120dp"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/gray"
            android:onClick="onSendClick"
            android:text="send"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:visibility="invisible"
            tools:ignore="SpeakableTextPresentCheck" />


    </FrameLayout>

    <LinearLayout
        android:id="@+id/container"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:paddingVertical="6dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Button"
                android:onClick="onNumberClick"
                android:paddingEnd="1dp"
                android:paddingStart="0dp"
                android:text="@string/ac"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Button"
                android:onClick="onOperationClick"
                android:paddingStart="0dp"
                android:paddingEnd="1dp"
                android:layout_marginHorizontal="14dp"
                android:text="@string/PlusMinus"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/pressed"
                style="@style/Gray.Button"
                android:onClick="onOperationClick"
                android:layout_marginEnd="14dp"
                android:text="@string/Percent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dividing"
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:text="@string/Divide" />

        </LinearLayout>
        <LinearLayout
            android:paddingVertical="6dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/GrayDark.Button"
                android:onClick="onNumberClick"
                android:text="@string/Seven"/>

            <com.google.android.material.button.MaterialButton
                style="@style/GrayDark.Button"
                android:onClick="onNumberClick"
                android:layout_marginHorizontal="14dp"
                android:text="@string/eight"/>

            <com.google.android.material.button.MaterialButton
                style="@style/GrayDark.Button"
                android:onClick="onNumberClick"
                android:layout_marginEnd="14dp"
                android:text="@string/Nine" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/multiply"
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:text="@string/Mult" />
        </LinearLayout>
        <LinearLayout
            android:paddingVertical="6dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/GrayDark.Button"
                android:onClick="onNumberClick"
                android:text="@string/Four"/>

            <com.google.android.material.button.MaterialButton
                style="@style/GrayDark.Button"
                android:onClick="onNumberClick"
                android:layout_marginHorizontal="14dp"
                android:text="@string/Fife"/>

            <com.google.android.material.button.MaterialButton
                style="@style/GrayDark.Button"
                android:onClick="onNumberClick"
                android:layout_marginEnd="14dp"
                android:text="@string/Six" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/minus"
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:text="@string/Minus" />
        </LinearLayout>
        <LinearLayout
            android:paddingVertical="6dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/GrayDark.Button"
                android:onClick="onNumberClick"
                android:text="@string/One"/>

            <com.google.android.material.button.MaterialButton
                style="@style/GrayDark.Button"
                android:onClick="onNumberClick"
                android:layout_marginHorizontal="14dp"
                android:text="@string/Two"/>

            <com.google.android.material.button.MaterialButton
                style="@style/GrayDark.Button"
                android:onClick="onNumberClick"
                android:layout_marginEnd="14dp"
                android:text="@string/Three" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/plus"
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:text="@string/Plus" />
        </LinearLayout>
        <LinearLayout
            android:paddingVertical="6dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



            <com.google.android.material.button.MaterialButton
                style="@style/GrayDark.Button"
                android:onClick="onNumberClick"
                android:paddingStart="32dp"
                android:textAlignment="textStart"
                android:layout_width="154dp"
                android:text="@string/Zero1"/>

            <com.google.android.material.button.MaterialButton
                style="@style/GrayDark.Button"
                android:layout_marginHorizontal="14dp"
                android:onClick="onNumberClick"
                android:text="@string/Point" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/equals"
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:text="@string/Equals" />
        </LinearLayout>




    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
